manifests/gitops/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ${WORKSHOP_NAMESPACE}
  labels:
    app: keycloak
    app.kubernetes.io/part-of: people-service
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
