manifests/gitops/keycloak/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: ${WORKSHOP_NAMESPACE}
  labels:
    app: keycloak
    app.kubernetes.io/part-of: people-service
spec:
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
